--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <header class="header-site"> 
         <div class="container">
+            
             <nav class="navigation">
                 <a href=“/“ class="header-logo link"> <span class="header-logo-item">WEB</span>STUDIO</a>
                 <ul class="header-list list ">
@@ -27,7 +28,7 @@
      </nav>
             <a href="mailto:info@devstudio.com" class="header-mail link" >info@devstudio.com </a>   
             <a href="tel:+110001111111" class="header-tel link" >+11 (000) 111-11-11</a>    
-        </div>        
+    </div>        
     </header>
 
     <main class="main-site">
@@ -86,23 +87,31 @@
                 <ul class="team-list list">
                     <li class="team-item">
                         <img class="team-item-img"  src="img/Mark-Guerrero.jpg" alt="Foto Mark-Guerrero" width="264" />
-                        <h3 class="team-item-name" >Mark Guerrero</h3>
+                        <div class="team-item-padding">
+                            <h3 class="team-item-name" >Mark Guerrero</h3>
                         <p class="team-item-position">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img class="team-item-img" src="img/Tom-Ford.jpg" alt="Foto Tom-Ford" width="264" />
+                        <div class="team-item-padding">
                         <h3 class="team-item-name" >Tom Ford</h3>
                         <p class="team-item-position">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img class="team-item-img" src="img/Camila-Garcia.jpg" alt="Foto Camila-Garcia" width="264" />
+                        <div class="team-item-padding">
                         <h3 class="team-item-name" >Camila Garcia</h3>
                         <p class="team-item-position">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img class="team-item-img" src="img/Daniel-Wilson.jpg" alt="Foto Daniel-Wilson" width="264" />
+                        <div class="team-item-padding">
                         <h3 class="team-item-name">Daniel Wilson</h3>
                         <p class="team-item-position">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
