--- a/portfolio.html
+++ b/portfolio.html
@@ -15,11 +15,9 @@
 </head>
 
 <body>
-
-    <header class="header-site">
-        <div class="container">
-
-
+    <header class="header-site">  
+        <div class="header-border">     
+        <div class="container">   
             <nav class="navigation">
                 <a href="/" class="header-logo link"> <span class="header-logo-item">WEB</span>STUDIO </a>
                 <ul class="header-list list">
@@ -36,11 +34,12 @@
             </nav>
             <a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com </a>
             <a href="tel:+110001111111" class="header-tel link">+11 (000) 111-11-11</a>
-        </div>
+       </div>  
+     </div>
     </header>
 
     <main>
-        <section class="chose">
+        <section class="section-portfolio">
             <div class="container">
                 <ul class="chose-list list">
                     <li class="chose-item">
@@ -59,10 +58,7 @@
                         <button class="chose-btn" type="button">Marketing</button>
                     </li>
                 </ul>
-            </div>
-        </section>
-
-        <section class="gallery">
+            </div>       
             <div class="container">
                 <ul class="gallery-list list">
                     <li class="gallery-item">
