--- a/portfolio.html
+++ b/portfolio.html
@@ -62,49 +62,69 @@
             <div class="container">
                 <ul class="gallery-list list">
                     <li class="gallery-item">
+        
                         <Img src="./img/banking-app.jpg" alt="Banking App Interface Concept" width="360">
+                            <div class="gallery-item-padding">
                         <h3 class="gallery-item-pretitle">Banking App Interface Concept</h3>
                         <p class="gallery-item-position">App</p>
+                            </div>
                     </li>
                     <li class="gallery-item">
                         <Img src="./img/cashless-payment.jpg" alt="Cashless Payment" width="360">
+                        <div class="gallery-item-padding" >
+                        
                         <h3 class="gallery-item-pretitle">Cashless Payment</h3>
                         <p class="gallery-item-position">Marketing</p>
+                        </div>
                     </li>
                     <li class="gallery-item">
                         <Img src="./img/meditation-app.jpg" alt="Meditaion App" width="360">
+                            <div class="gallery-item-padding">
                         <h3 class="gallery-item-pretitle">Meditaion App</h3>
                         <p class="gallery-item-position">App</p>
+                        </div>
                     </li>
                     <li class="gallery-item">
                         <Img src="./img/taxi-service.jpg" alt="Taxi Service" width="360">
+                            <div class="gallery-item-padding">
                         <h3 class="gallery-item-pretitle">Taxi Service</h3>
                         <p class="gallery-item-position">Marketing</p>
+                            </div>
                     </li class="gallery-item">
                     <li class="gallery-item">
                         <Img src="./img/screen-illustration.jpg" alt="Screen Illustrations" width="360">
+                            <div class="gallery-item-padding">
                         <h3 class="gallery-item-pretitle">Screen Illustrations</h3>
                         <p class="gallery-item-position">Design</p>
+                          </div>
                     </li>
                     <li class="gallery-item">
                         <Img src="./img/online-courses.jpg" alt="Online Courses" width="360">
+                            <div class="gallery-item-padding">
                         <h3 class="gallery-item-pretitle">Online Courses</h3>
                         <p class="gallery-item-position">Marketing</p>
+                        </div>
                     </li>
                     <li class="gallery-item">
                         <Img src="./img/instagram-stories.jpg" alt="Instagram Stories Concept" width="360">
+                            <div class="gallery-item-padding">
                         <h3 class="gallery-item-pretitle">Instagram Stories Concept</h3>
                         <p class="gallery-item-position">Design</p>
+                            </div>
                     </li>
                     <li class="gallery-item">
                         <Img src="img/organic-food.jpg" alt="Organic Food" width="360">
+                        <div class="gallery-item-padding">
                         <h3 class="gallery-item-pretitle">Organic Food</h3>
                         <p class="gallery-item-position">Web Site</p>
+                        </div>
                     </li>
                     <li class="gallery-item">
                         <Img src="img/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
+                        <div class="gallery-item-padding">
                         <h3 class="gallery-item-pretitle">Fresh Coffee</h3>
                         <p class="gallery-item-position">Web Site</p>
+                        </div>
                     </li>
                 </ul>
             </div>
