--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,7 @@
 </head>
 
 <body>
-    <header class="header-site">  
-        <div class="header-border">     
+    <header class="header-site-portfolio">            
         <div class="container">   
             <nav class="navigation">
                 <a href="/" class="header-logo link"> <span class="header-logo-item">WEB</span>STUDIO </a>
@@ -35,7 +34,6 @@
             <a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com </a>
             <a href="tel:+110001111111" class="header-tel link">+11 (000) 111-11-11</a>
        </div>  
-     </div>
     </header>
 
     <main>
